# wasm-opcodes

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  operation.rs
