[package]
name = "wasm-opcodes"
version = "0.115.1"
edition = "2021"
license = "MIT"
description = "A set of procedural enums useful for readabilty when implementing something over all wasm instructions."
homepage = "https://github.com/LucentFlux/wasm-opcodes"
repository = "https://github.com/LucentFlux/wasm-opcodes"
readme = "README.md"
keywords = ["parser", "WebAssembly", "wasm", "utility"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[dependencies]
wasmparser = "0.118.1"
paste = "1.0"
